{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 21,
  "lineage": "65e776e5-f98a-a40b-c232-ce9b88ed1d9f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:370661022279:network-acl/acl-07ef47749df8c9f72",
            "default_network_acl_id": "acl-07ef47749df8c9f72",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-07ef47749df8c9f72",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "370661022279",
            "region": "eu-west-1",
            "subnet_ids": [
              "subnet-05f6f6a06adb5cac8",
              "subnet-088a6fd452f66cc02",
              "subnet-08cd870b73d40786b",
              "subnet-0fec94f2450c87a84"
            ],
            "tags": {
              "Country": "Espana",
              "Name": "ACL-Reporting_agencia-Default",
              "Platform": "Terraform",
              "Project": "Reporting Agencia"
            },
            "tags_all": {
              "Country": "Espana",
              "Name": "ACL-Reporting_agencia-Default",
              "Platform": "Terraform",
              "Project": "Reporting Agencia"
            },
            "vpc_id": "vpc-016c4e6a44c5cfdbc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tgw_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "arn": "arn:aws:ec2:eu-west-1:370661022279:transit-gateway-attachment/tgw-attach-05fbae8d9e2ff199c",
            "dns_support": "enable",
            "id": "tgw-attach-05fbae8d9e2ff199c",
            "ipv6_support": "disable",
            "region": "eu-west-1",
            "security_group_referencing_support": "enable",
            "subnet_ids": [
              "subnet-08cd870b73d40786b",
              "subnet-0fec94f2450c87a84"
            ],
            "tags": {
              "Country": "Espana",
              "Name": "TGW-Attach-Irlanda-core",
              "Platform": "Terraform",
              "Project": "Reporting Agencia"
            },
            "tags_all": {
              "Country": "Espana",
              "Name": "TGW-Attach-Irlanda-core",
              "Platform": "Terraform",
              "Project": "Reporting Agencia"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0f6739e2525074a0a",
            "vpc_id": "vpc-016c4e6a44c5cfdbc",
            "vpc_owner_id": "370661022279"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05c0831d19c33e9e0",
            "arn": "arn:aws:ec2:eu-west-1:370661022279:elastic-ip/eipalloc-05c0831d19c33e9e0",
            "association_id": "eipassoc-0f8c0d8ceddfcd244",
            "domain": "vpc",
            "id": "eipalloc-05c0831d19c33e9e0",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-050095b8f4f92a39b",
            "private_dns": "ip-10-133-29-102.eu-west-1.compute.internal",
            "private_ip": "10.133.29.102",
            "public_dns": "ec2-52-210-64-186.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.210.64.186",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-1",
            "tags": {
              "Country": "Espana",
              "Name": "EIP-Reporting_agencia-1",
              "Platform": "Terraform",
              "Project": "Reporting Agencia"
            },
            "tags_all": {
              "Country": "Espana",
              "Name": "EIP-Reporting_agencia-1",
              "Platform": "Terraform",
              "Project": "Reporting Agencia"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b23664b9e4a2daca",
            "arn": "arn:aws:ec2:eu-west-1:370661022279:elastic-ip/eipalloc-0b23664b9e4a2daca",
            "association_id": "eipassoc-06f3f0c3f47101950",
            "domain": "vpc",
            "id": "eipalloc-0b23664b9e4a2daca",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0677dd2304b2f6195",
            "private_dns": "ip-10-133-29-123.eu-west-1.compute.internal",
            "private_ip": "10.133.29.123",
            "public_dns": "ec2-52-49-156-39.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.49.156.39",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-1",
            "tags": {
              "Country": "Espana",
              "Name": "EIP-Reporting_agencia-2",
              "Platform": "Terraform",
              "Project": "Reporting Agencia"
            },
            "tags_all": {
              "Country": "Espana",
              "Name": "EIP-Reporting_agencia-2",
              "Platform": "Terraform",
              "Project": "Reporting Agencia"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:370661022279:internet-gateway/igw-013521ed4fb89f174",
            "id": "igw-013521ed4fb89f174",
            "owner_id": "370661022279",
            "region": "eu-west-1",
            "tags": {
              "Country": "Espana",
              "Name": "IGW-Reporting_agencia",
              "Platform": "Terraform",
              "Project": "Reporting Agencia"
            },
            "tags_all": {
              "Country": "Espana",
              "Name": "IGW-Reporting_agencia",
              "Platform": "Terraform",
              "Project": "Reporting Agencia"
            },
            "vpc_id": "vpc-016c4e6a44c5cfdbc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05c0831d19c33e9e0",
            "association_id": "eipassoc-0f8c0d8ceddfcd244",
            "connectivity_type": "public",
            "id": "nat-0624f5b1caa9ac4b8",
            "network_interface_id": "eni-050095b8f4f92a39b",
            "private_ip": "10.133.29.102",
            "public_ip": "52.210.64.186",
            "region": "eu-west-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05f6f6a06adb5cac8",
            "tags": {
              "Country": "Espana",
              "Name": "NAT-Reporting_agencia-1",
              "Platform": "Terraform",
              "Project": "Reporting Agencia"
            },
            "tags_all": {
              "Country": "Espana",
              "Name": "NAT-Reporting_agencia-1",
              "Platform": "Terraform",
              "Project": "Reporting Agencia"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b23664b9e4a2daca",
            "association_id": "eipassoc-06f3f0c3f47101950",
            "connectivity_type": "public",
            "id": "nat-0bfdc54a34d8ad025",
            "network_interface_id": "eni-0677dd2304b2f6195",
            "private_ip": "10.133.29.123",
            "public_ip": "52.49.156.39",
            "region": "eu-west-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-088a6fd452f66cc02",
            "tags": {
              "Country": "Espana",
              "Name": "NAT-Reporting_agencia-2",
              "Platform": "Terraform",
              "Project": "Reporting Agencia"
            },
            "tags_all": {
              "Country": "Espana",
              "Name": "NAT-Reporting_agencia-2",
              "Platform": "Terraform",
              "Project": "Reporting Agencia"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:370661022279:route-table/rtb-080687622f32db876",
            "id": "rtb-080687622f32db876",
            "owner_id": "370661022279",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0624f5b1caa9ac4b8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.23.162/32",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f6739e2525074a0a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.35.10/32",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f6739e2525074a0a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.48.0/20",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f6739e2525074a0a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.64.0/20",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f6739e2525074a0a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.10.0.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f6739e2525074a0a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.133.58.104/32",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f6739e2525074a0a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.133.58.64/26",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f6739e2525074a0a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.133.58.64/27",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f6739e2525074a0a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.133.58.96/27",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f6739e2525074a0a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.133.59.64/28",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f6739e2525074a0a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.133.59.80/28",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f6739e2525074a0a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.14.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f6739e2525074a0a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.14.3.177/32",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f6739e2525074a0a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.177.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f6739e2525074a0a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.253.1.52/32",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f6739e2525074a0a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.253.2.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f6739e2525074a0a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.50.3.160/27",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f6739e2525074a0a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.50.3.192/27",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f6739e2525074a0a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.50.3.196/32",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f6739e2525074a0a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.15.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f6739e2525074a0a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.17.25.0/25",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f6739e2525074a0a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.17.25.17/32",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f6739e2525074a0a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Country": "Espana",
              "Name": "RT-Private1",
              "Platform": "Terraform",
              "Project": "Reporting Agencia"
            },
            "tags_all": {
              "Country": "Espana",
              "Name": "RT-Private1",
              "Platform": "Terraform",
              "Project": "Reporting Agencia"
            },
            "timeouts": null,
            "vpc_id": "vpc-016c4e6a44c5cfdbc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "370661022279",
            "id": "rtb-080687622f32db876",
            "region": "eu-west-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:370661022279:route-table/rtb-04377e2835327542d",
            "id": "rtb-04377e2835327542d",
            "owner_id": "370661022279",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bfdc54a34d8ad025",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.23.162/32",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f6739e2525074a0a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.35.10/32",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f6739e2525074a0a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.48.0/20",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f6739e2525074a0a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.64.0/20",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f6739e2525074a0a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.10.0.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f6739e2525074a0a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.133.58.104/32",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f6739e2525074a0a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.133.58.64/27",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f6739e2525074a0a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.133.58.96/27",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f6739e2525074a0a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.133.59.64/28",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f6739e2525074a0a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.133.59.80/28",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f6739e2525074a0a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.14.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f6739e2525074a0a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.14.3.177/32",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f6739e2525074a0a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.177.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f6739e2525074a0a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.253.1.52/32",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f6739e2525074a0a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.253.2.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f6739e2525074a0a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.50.3.160/27",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f6739e2525074a0a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.50.3.192/27",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f6739e2525074a0a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.50.3.196/32",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f6739e2525074a0a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "128.0.0.0/2",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f6739e2525074a0a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.15.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f6739e2525074a0a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.17.25.0/25",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f6739e2525074a0a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.17.25.17/32",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f6739e2525074a0a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Country": "Espana",
              "Name": "RT-Private2",
              "Platform": "Terraform",
              "Project": "Reporting Agencia"
            },
            "tags_all": {
              "Country": "Espana",
              "Name": "RT-Private2",
              "Platform": "Terraform",
              "Project": "Reporting Agencia"
            },
            "timeouts": null,
            "vpc_id": "vpc-016c4e6a44c5cfdbc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "370661022279",
            "id": "rtb-04377e2835327542d",
            "region": "eu-west-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:370661022279:route-table/rtb-077a2c6b99043cf7b",
            "id": "rtb-077a2c6b99043cf7b",
            "owner_id": "370661022279",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-013521ed4fb89f174",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Country": "Espana",
              "Name": "RT-Public1",
              "Platform": "Terraform",
              "Project": "Reporting Agencia"
            },
            "tags_all": {
              "Country": "Espana",
              "Name": "RT-Public1",
              "Platform": "Terraform",
              "Project": "Reporting Agencia"
            },
            "timeouts": null,
            "vpc_id": "vpc-016c4e6a44c5cfdbc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "370661022279",
            "id": "rtb-077a2c6b99043cf7b",
            "region": "eu-west-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:370661022279:route-table/rtb-04bb255d36c631dc5",
            "id": "rtb-04bb255d36c631dc5",
            "owner_id": "370661022279",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-013521ed4fb89f174",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Country": "Espana",
              "Name": "RT-Public2",
              "Platform": "Terraform",
              "Project": "Reporting Agencia"
            },
            "tags_all": {
              "Country": "Espana",
              "Name": "RT-Public2",
              "Platform": "Terraform",
              "Project": "Reporting Agencia"
            },
            "timeouts": null,
            "vpc_id": "vpc-016c4e6a44c5cfdbc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "370661022279",
            "id": "rtb-04bb255d36c631dc5",
            "region": "eu-west-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aurora_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:370661022279:security-group/sg-0a7ac2836e60e0688",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a7ac2836e60e0688",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.23.162/32"
                ],
                "description": "Jager",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "10.1.35.10/32"
                ],
                "description": "Absenta",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "10.133.29.64/26"
                ],
                "description": "Propia VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "10.133.58.104/32",
                  "10.50.3.196/32",
                  "172.17.25.17/32"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "10.14.0.0/16",
                  "10.50.3.160/27",
                  "10.50.3.192/27",
                  "172.17.25.0/25",
                  "10.133.58.64/26",
                  "10.253.2.0/24",
                  "10.177.2.50/32",
                  "10.133.59.80/28"
                ],
                "description": "2024091385001746",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "10.14.3.177/32"
                ],
                "description": "Prueba",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "SG-Reporting_agencia-RDS-aurora-mysql",
            "name_prefix": "",
            "owner_id": "370661022279",
            "region": "eu-west-1",
            "revoke_rules_on_delete": null,
            "tags": {
              "Country": "Espana",
              "Name": "SG-Reporting_agencia-RDS-aurora-mysql",
              "Platform": "Terraform",
              "Project": "Reporting Agencia"
            },
            "tags_all": {
              "Country": "Espana",
              "Name": "SG-Reporting_agencia-RDS-aurora-mysql",
              "Platform": "Terraform",
              "Project": "Reporting Agencia"
            },
            "timeouts": null,
            "vpc_id": "vpc-016c4e6a44c5cfdbc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "370661022279",
            "id": "sg-0a7ac2836e60e0688",
            "region": "eu-west-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:370661022279:security-group/sg-03e7ecb29301377f5",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03e7ecb29301377f5",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.133.29.64/26"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "370661022279",
            "region": "eu-west-1",
            "revoke_rules_on_delete": null,
            "tags": {
              "Country": "Espana",
              "Name": "SG-Reporting_agencia-Default",
              "Platform": "Terraform",
              "Project": "Reporting Agencia"
            },
            "tags_all": {
              "Country": "Espana",
              "Name": "SG-Reporting_agencia-Default",
              "Platform": "Terraform",
              "Project": "Reporting Agencia"
            },
            "timeouts": null,
            "vpc_id": "vpc-016c4e6a44c5cfdbc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "370661022279",
            "id": "sg-03e7ecb29301377f5",
            "region": "eu-west-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:370661022279:subnet/subnet-08cd870b73d40786b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.133.29.64/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08cd870b73d40786b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "370661022279",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Country": "Espana",
              "Name": "10.133.29.64/28-Private1-eu-west-1a",
              "Platform": "Terraform",
              "Project": "Reporting Agencia"
            },
            "tags_all": {
              "Country": "Espana",
              "Name": "10.133.29.64/28-Private1-eu-west-1a",
              "Platform": "Terraform",
              "Project": "Reporting Agencia"
            },
            "vpc_id": "vpc-016c4e6a44c5cfdbc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "370661022279",
            "id": "subnet-08cd870b73d40786b",
            "region": "eu-west-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:370661022279:subnet/subnet-0fec94f2450c87a84",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.133.29.80/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fec94f2450c87a84",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "370661022279",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Country": "Espana",
              "Name": "10.133.29.80/28-Private2-eu-west-1b",
              "Platform": "Terraform",
              "Project": "Reporting Agencia"
            },
            "tags_all": {
              "Country": "Espana",
              "Name": "10.133.29.80/28-Private2-eu-west-1b",
              "Platform": "Terraform",
              "Project": "Reporting Agencia"
            },
            "vpc_id": "vpc-016c4e6a44c5cfdbc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "370661022279",
            "id": "subnet-0fec94f2450c87a84",
            "region": "eu-west-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:370661022279:subnet/subnet-05f6f6a06adb5cac8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.133.29.96/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f6f6a06adb5cac8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "370661022279",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Country": "Espana",
              "Name": "10.133.29.96/28-Public1-eu-west-1a",
              "Platform": "Terraform",
              "Project": "Reporting Agencia"
            },
            "tags_all": {
              "Country": "Espana",
              "Name": "10.133.29.96/28-Public1-eu-west-1a",
              "Platform": "Terraform",
              "Project": "Reporting Agencia"
            },
            "vpc_id": "vpc-016c4e6a44c5cfdbc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "370661022279",
            "id": "subnet-05f6f6a06adb5cac8",
            "region": "eu-west-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:370661022279:subnet/subnet-088a6fd452f66cc02",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.133.29.112/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-088a6fd452f66cc02",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "370661022279",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Country": "Espana",
              "Name": "10.133.29.112/28-Public2-eu-west-1b",
              "Platform": "Terraform",
              "Project": "Reporting Agencia"
            },
            "tags_all": {
              "Country": "Espana",
              "Name": "10.133.29.112/28-Public2-eu-west-1b",
              "Platform": "Terraform",
              "Project": "Reporting Agencia"
            },
            "vpc_id": "vpc-016c4e6a44c5cfdbc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "370661022279",
            "id": "subnet-088a6fd452f66cc02",
            "region": "eu-west-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "reporting_agencia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:370661022279:vpc/vpc-016c4e6a44c5cfdbc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.133.29.64/26",
            "default_network_acl_id": "acl-07ef47749df8c9f72",
            "default_route_table_id": "rtb-04377e2835327542d",
            "default_security_group_id": "sg-03e7ecb29301377f5",
            "dhcp_options_id": "dopt-099dcead90fb0e4f5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-016c4e6a44c5cfdbc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04377e2835327542d",
            "owner_id": "370661022279",
            "region": "eu-west-1",
            "tags": {
              "Country": "Espana",
              "Name": "10.133.29.64/26-VPC-Reporting_agencia",
              "Platform": "Terraform",
              "Project": "Reporting Agencia"
            },
            "tags_all": {
              "Country": "Espana",
              "Name": "10.133.29.64/26-VPC-Reporting_agencia",
              "Platform": "Terraform",
              "Project": "Reporting Agencia"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}